# Greeks-Engine

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
benchmarks/: CMakeLists.txt  CPUBenchmark.cpp  GPUBenchmark.cu  benchmark.md  plot.py  run_benchmark.bat  run_benchmark.sh  setup.hpp
include/: BSMModel.hpp  Greeks.hpp  MarketParameters.hpp  Option.hpp  macros.hpp  normcdf.hpp
include/gpu/: BSMKernel.cuh  BinomialTreeKernel.cuh  GreeksKernel.cuh  PricingKernel.cuh  error_checking.cuh
include/math/: normcdf.hpp  normpdf.hpp
include/models/: BSMModel.hpp  BinomialModel.hpp  BinomialTreeModel.hpp  IModel.hpp  IPricingModel.hpp  MonteCarloModel.hpp
src/: BSMModel.cpp  GreeksKernel.cu  main.cpp  main.cu
src/gpu/: BSMKernel.cu  BinomialTreeKernel.cu  GreeksKernel.cu  PricingKernel.cu
src/models/: BSMModel.cpp
tests/: binomial_tree_tests.cpp  bsm_tests.cpp
